--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
   "name": "pagina-para-una-maquilladora-iatrino",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/prueba.scss Proyecto Final/css/styles.css",
-    "watch-css": "nodemon -e scss -x \"npm run build-css\"" 
+    "build-css": "node-sass --include-path scss scss/sass.scss css/estilo.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.12"
-  }
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/miatrino/repoCoderHouse.git"
+  },
+  "bugs": {
+    "url": "https://github.com/miatrino/repoCoderHouse/issues"
+  },
+  "homepage": "https://github.com/miatrino/repoCoderHouse#readme",
+  "description": ""
 }
